--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -90,14 +90,41 @@
 
 .topcircle{
     position: absolute;
-    width: 50%;
+    width: 50vw;
     height: 50vw;
     min-width: 350px;
     min-width: 350px;
     top: -128px;
-    left: 10vw;
-    border: 764px;
+    left: -10vw;
+    border-radius: 764px;
     background: rgba(25, 55, 109, 0.7);
     filter: blur(100px);
+    z-index: 0;
 
+}
+
+.bottomcircle{
+    position: absolute;
+    width: 70vw;
+    height: 50vw;
+    min-width: 350px;
+    min-width: 250px;
+    top: 246px;
+    right: -25vw;
+    border-radius: 764px;
+    background: rgba(25, 55, 109, 0.7);
+    filter: blur(100px);
+    z-index: 0;
+
+}
+
+@media screen and (max-width: 830px){
+    .container{
+        flex-direction: column-reverse;
+        gap: 30px;
+    }
+    .content{
+        align-items: center;
+    }
+    
 }
