--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,25 +1,15 @@
-:root{
-    --color-text: #fff;
-    --color-primary: #576cbc;
-    --color-secondary: #19376d;
-    --color-dark: #0b2447;
-    --color-background: #04152d;
-
-    --font-roboto: "Roboto";
-}
-
-.container{
+.about-container {
     position: relative;
     background-color: rgba(12, 12, 12, 0.6);
     border-radius: 15px;
     padding: 73px;
-    margin-top: 129px;
+    margin-top: 90px;
     z-index: 1;
     margin-left: 10%;
     margin-right: 10%;
 }
 
-.title{
+.about-title {
     color: var(--color-text);
     font-size: 35px;
     font-weight: 700;
@@ -27,25 +17,24 @@
     text-transform: uppercase;
 }
 
-.content{
+.about-content {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.aboutimg{
+.about-img {
     width: 35%;
-
 }
 
-.items{
+.about-items {
     color: var(--color-text);
     display: flex;
     flex-direction: column;
     gap: 50px;
 }
 
-.aboutitems{
+.about-item {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -54,56 +43,54 @@
     padding: 25px;
     background-image: linear-gradient(
         90deg, 
-        rgba(165, 215, 232, 0.42)0%,
-        rgba(255, 255, 255, 0)100%
+        rgba(165, 215, 232, 0.42) 0%,
+        rgba(255, 255, 255, 0) 100%
     );
     background-size: 0 100%;
     background-repeat: no-repeat;
     transition: 0.4s;
-
 }
 
-.aboutitems:hover{
+.about-item:hover {
     background-size: 100% 100%;
 }
 
-.aboutitems h3{
+.about-item h3 {
     font-size: 25px;
     font-weight: 600;
 }
 
-.aboutitems p{
+.about-item p {
     font-size: 25px;
 }
 
 @media screen and (max-width: 830px) {
-    .container {
+    .about-container {
         background-color: transparent;
         padding-left: 0;
         padding-right: 0;
     }
 
-    .title {
+    .about-title {
         text-align: center;
-        margin-bottom: 20px; 
+        
     }
 
-    .content {
+    .about-content {
         flex-direction: column; 
     }
 
-    .aboutimg {
-        display: block; 
-        width: 100%;    
-        margin-bottom: 20px; 
+    .about-img {
+        display: none; 
     }
 
-    .aboutitems {
-        margin-top: 20px;
-    }
-
-    .items {
+    .about-item {
         padding-left: 0;
         padding-right: 0;
     }
+
+    .about-items {
+        margin-top: 30px;
+    }
 }
+
