--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,3 +1,12 @@
+:root {
+    --color-text: #ffffff;
+    --color-primary: #576cbc;
+    --color-secondary: #19376d;
+    --color-dark: #0b2447;
+    --color-background: #04152d;
+    --font-roboto: "Roboto", sans-serif;
+}
+
 .about-container {
     position: relative;
     background-color: rgba(12, 12, 12, 0.6);
@@ -14,7 +23,9 @@
     font-size: 35px;
     font-weight: 700;
     letter-spacing: 1.75px;
-    text-transform: uppercase;
+    text-transform: uppercase;   
+    text-align: center;
+       
 }
 
 .about-content {
@@ -28,18 +39,23 @@
 }
 
 .about-items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
+    padding: 20px 0;
     color: var(--color-text);
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
+    margin-top: 20px;
+    width: 100%; 
+    column-gap: 25px;
 }
+
+
 
 .about-item {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     border-radius: 20px;
-    list-style: none;
     padding: 25px;
     background-image: linear-gradient(
         90deg, 
@@ -48,22 +64,56 @@
     );
     background-size: 0 100%;
     background-repeat: no-repeat;
-    transition: 0.4s;
+    transition: background-size 0.4s, transform 0.3s;
+    max-width: 100%; 
+    box-sizing: border-box; 
 }
+
 
 .about-item:hover {
     background-size: 100% 100%;
+    transform: translateY(-5px);
 }
 
-.about-item h3 {
-    font-size: 25px;
-    font-weight: 600;
+.about-item img{    
+    margin: 15px;
 }
+
+.about-item h3{
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    color:lemonchiffon;
+    text-align: center;
+} 
 
 .about-item p {
-    font-size: 25px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.6;
+    text-align: center;
+    font-family: var(--font-roboto);
 }
 
+.about-intro {
+    font-size: 18px;
+    font-family: var(--font-roboto);
+    color: var(--color-text);
+    margin-top: 15px;
+    margin-bottom: 30px;
+    line-height: 2;
+    text-align: justify;
+    background-color: rgba(12, 12, 12, 0.4);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 100%;
+    transition: transform 0.3s ease;
+}
+
+.about-intro:hover {
+    transform: scale(1.02); /* Slight hover effect to draw attention */
+}
 @media screen and (max-width: 830px) {
     .about-container {
         background-color: transparent;
@@ -90,7 +140,7 @@
     }
 
     .about-items {
-        margin-top: 30px;
-    }
+        grid-template-columns: 1fr; /* Switch to a single column on smaller screens */
+        gap: 20px;
 }
-
+}
