--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -99,21 +99,40 @@
     font-size: 18px;
     font-family: var(--font-roboto);
     color: var(--color-text);
-    margin-top: 15px;
-    margin-bottom: 30px;
-    line-height: 2;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    line-height: 1.8;
     text-align: justify;
-    background-color: rgba(12, 12, 12, 0.4);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
     max-width: 100%;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
+
+
 .about-intro:hover {
-    transform: scale(1.02); /* Slight hover effect to draw attention */
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+    transform: scale(1.02); 
 }
+
+.about-para {
+    margin-bottom: 25px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 26px;
+    color: var(--highlight-color);
+    border-bottom: 3px solid lemonchiffon;
+    padding-bottom: 5px;
+    text-transform: uppercase;
+}
+
+.about-paragraph {
+    margin-bottom: 20px;
+}
+
+
 @media screen and (max-width: 830px) {
     .about-container {
         background-color: transparent;
@@ -140,7 +159,7 @@
     }
 
     .about-items {
-        grid-template-columns: 1fr; /* Switch to a single column on smaller screens */
+        grid-template-columns: 1fr; 
         gap: 20px;
 }
 }
