--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -87,11 +87,19 @@
 }
 
 .history-item img {
-    width: 139px; 
-    height: 180px; 
-    object-fit: cover; 
+    width: 139px;
+    height: 180px;
+    object-fit: cover;
     border-radius: 3px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
 }
+
+.history-item img:hover {
+    transform: scale(1.05);            
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
+
 
 
 .history-item-details{
@@ -114,7 +122,7 @@
 .history-item-details ul{
     margin-top: 6px;
     list-style-position: inside;
-    font-size: 25px;
+    font-size: 22.5px;
     list-style-type: disc;
     margin-left: 17px;
     margin-bottom: 10px;
@@ -124,15 +132,13 @@
 .head1{
     margin-bottom: 7px;
     font-family: var(--font-roboto);
+    letter-spacing: 1.7px;
+    
     
 }
 
-.head2 {            
-    color: var(--color-text); 
-    font-weight: 300;       
-    margin-bottom: 10px;    
-    font-style: italic;     
-      
+.head2 {                   
+    margin-bottom: 10px;     
 }
 
 @media screen  and (max-width: 830px) {
