--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,6 @@
 .App{
     background-color: var(--color-background);
     width: 100%;
-    height: 100%;    
+    height: 100%;
+    overflow: hidden;    
 }
