--- a/src/Components/Project/Projects.css
+++ b/src/Components/Project/Projects.css
@@ -8,7 +8,7 @@
     --font-roboto: "Roboto";
 }
 
-.container{
+#projects{
     margin-top: 76px;
     color: var(--color-text);
     margin-left: 10%;
